--- a/css/style.css
+++ b/css/style.css
@@ -124,10 +124,14 @@ section {
   border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
   border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
   height: 6rem;
-  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  transform: scale(0);
+  transform-origin: top;
+  overflow: hidden;
 }
 .header .search-form.active {
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  transform: scale(1);
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 .header .search-form input {
   flex: 1;
@@ -556,14 +560,16 @@ section {
     background: #000;
     border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
     border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
-    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    transform: scale(0);
+    transform-origin: top;
+    overflow: hidden;
   }
   .header .navbar a {
     display: block;
     margin: 2rem;
   }
   .header .navbar.active {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    transform: scale(1);
   }
 
   .home .clould-2 {
