chang to polygon

--- a/css/style.scss
+++ b/css/style.scss
@@ -152,16 +152,10 @@ section {
         border-top: $border;
         border-bottom: $border;
         height: 6rem;
-        // clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-        transform: scale(0);
-        transform-origin: top;
-        overflow: hidden;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 
         &.active {
-            // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-            transform: scale(1);
-            padding-top: 1.5rem;
-            padding-bottom: 1.5rem;
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
         }
 
         input {
@@ -647,10 +641,7 @@ section {
             background: $black;
             border-top: $border;
             border-bottom: $border;
-            // clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-            transform: scale(0);
-            transform-origin: top;
-            overflow: hidden;
+            clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 
             a {
                 display: block;
@@ -658,8 +649,7 @@ section {
             }
 
             &.active {
-                // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-                transform: scale(1);
+                clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
             }
         }
     }
