--- a/css/style.css
+++ b/css/style.css
@@ -124,14 +124,10 @@ section {
   border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
   border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
   height: 6rem;
-  transform: scale(0);
-  transform-origin: top;
-  overflow: hidden;
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 }
 .header .search-form.active {
-  transform: scale(1);
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 .header .search-form input {
   flex: 1;
@@ -560,16 +556,14 @@ section {
     background: #000;
     border-top: 0.1rem solid rgba(255, 255, 255, 0.2);
     border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
-    transform: scale(0);
-    transform-origin: top;
-    overflow: hidden;
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   }
   .header .navbar a {
     display: block;
     margin: 2rem;
   }
   .header .navbar.active {
-    transform: scale(1);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
   }
 
   .home .clould-2 {
